--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="keying_expense_occurred_date">Made on %1$s</string>
     <string name="keying_expense_save">Save</string>
     <string name="keying_successfully_completed">Keying was successfully completed</string>
+    <string name="checkup_expenses_table_balance">Balance : %s</string>
 </resources>
